//更新业务逻辑

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>云热点 文档中心 Cloud Hotspot Documents Center</title>
+        <title>Cloud Hotspot Documents Center</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content=""> 
         <link rel="stylesheet" href="gitbook/style.css"> 
@@ -34,6 +34,7 @@
 <ul>
 <li>Github : <a href="https://github.com/Cloud-Hotspot-Portal" target="_blank">https://github.com/Cloud-Hotspot-Portal</a></li>
 <li>Facebook: <a href="https://www.facebook.com/CloudHotspotOfficial" target="_blank">https://www.facebook.com/CloudHotspotOfficial</a></li>
+<li>SiteMap: <a href="https://docs.cloudshotspot.com/sitemap.xml" target="_blank">https://docs.cloudshotspot.com/sitemap.xml</a></li>
 
 </ul>
 
